# Speech-Emotion-Recognition

./: .coverage  LICENSE  README.md  audioetes.py  main.ipynb  pyproject.toml  requirements.md  test.txt  testte.py  trial.ipynb
.github/workflows/: python-tests.yml
.ipynb_checkpoints/: main-checkpoint.ipynb  trial-checkpoint.ipynb
result/: 69,2.model  mlp_classifier.model  mlp_classifier.model2
speech_emotion_recognition/: __init__.py  model_training.py  speech_emotion_recognition.py
speech_emotion_recognition/.ipynb_checkpoints/: speech_emotion_recognition-checkpoint.py
tests/: test_speech_emotion_recognition.py
