[tool.poetry]
name = "Speech-Emotion-Recognition"
version = "0.1.0"
description = ""
authors = ["anas-abusaif <anasabusief@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.2.2"
matplotlib = "^3.4.3"
librosa = "^0.8.1"
playsound = "^1.3.0"
sounddevice = "^0.4.3"
wavio = "^0.0.4"
gTTS = "^2.2.3"
SpeechRecognition = "^3.8.1"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.10b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
